# Fly_in

./: .gitignore  LICENSE  Makefile  README.md  drones.py  fly_in.py  manager.py  output.txt  parsing.py  pyproject.toml
maps/custom/: b.txt  bbbbb.txt  gobelin.txt
maps/easy/: 01_linear_path.txt
sources/: algo.py  connections.py  drones.py  manager.py  parsing.py  simulation.py  visual.py  zones.py
