[project]
name = "fly-in"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arcade>=3.3.3",
    "flake8>=7.3.0",
    "mypy>=1.19.1",
    "pydantic>=2.12.5",
    "rich>=14.3.3",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.19.1",
]
